// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NuclearJamQueueItem > (Snapshot) renders a current item with cover art 1`] = `
<div>
  <div
    class="border-border flex items-center gap-3 border-b-(length:--border-width) px-4 py-2 bg-primary"
    data-is-current="true"
    data-testid="jam-queue-item"
  >
    <div
      class="border-border bg-background-secondary flex size-12 shrink-0 items-center justify-center overflow-hidden rounded-md border-(length:--border-width)"
    >
      <img
        alt="Idioteque"
        class="size-full object-cover"
        src="https://example.com/kid-a.jpg"
      />
    </div>
    <div
      class="min-w-0 flex-1"
    >
      <div
        class="text-foreground truncate text-sm font-bold"
      >
        Idioteque
      </div>
      <div
        class="text-foreground-secondary truncate text-xs"
      >
        Radiohead
      </div>
    </div>
    <div
      class="text-foreground-secondary shrink-0 text-xs tabular-nums"
    >
      4:11
    </div>
  </div>
</div>
`;

exports[`NuclearJamQueueItem > (Snapshot) renders a non-current item without artwork 1`] = `
<div>
  <div
    class="border-border flex items-center gap-3 border-b-(length:--border-width) px-4 py-2"
    data-is-current="false"
    data-testid="jam-queue-item"
  >
    <div
      class="border-border bg-background-secondary flex size-12 shrink-0 items-center justify-center overflow-hidden rounded-md border-(length:--border-width)"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-music2 lucide-music-2 text-foreground opacity-20"
        fill="none"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="8"
          cy="18"
          r="4"
        />
        <path
          d="M12 18V2l7 4"
        />
      </svg>
    </div>
    <div
      class="min-w-0 flex-1"
    >
      <div
        class="text-foreground truncate text-sm font-bold"
      >
        Idioteque
      </div>
      <div
        class="text-foreground-secondary truncate text-xs"
      >
        Radiohead
      </div>
    </div>
    <div
      class="text-foreground-secondary shrink-0 text-xs tabular-nums"
    >
      4:11
    </div>
  </div>
</div>
`;
